fixed bad displaying of button in Quinces and fixex overlapping of image in sobre nosotros page.

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -497,6 +497,11 @@ a{
         
     }
     .text-and-button-quinces{
+        display: flex;
+        height: auto;
+        width: 100%;
+        flex-direction: column;
+        justify-content: center;
     }  
 }
 .image-parrafo-container{
